--- a/pom.xml
+++ b/pom.xml
@@ -20,3 +20,14 @@
 
 </project>
 
+<build>
+<plugins>
+    <groupId>org.apache.maven.plugins</groupId>
+    <areifactId>maven-compiler-plugin</areifactId>
+    <version>3.7.0</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>>
+    </configuration>
+</plugins>
+</build>
