--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,28 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <type>maven-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
 
 </project>
 
-<build>
-<plugins>
-    <groupId>org.apache.maven.plugins</groupId>
-    <areifactId>maven-compiler-plugin</areifactId>
-    <version>3.7.0</version>
-    <configuration>
-        <source>1.8</source>
-        <target>1.8</target>>
-    </configuration>
-</plugins>
-</build>
